# ordo

./: .gitignore  Cargo.toml  Makefile  build.rs
i18n/: messages.pot
i18n/en/LC_MESSAGES/: ordo.po
i18n/ru/LC_MESSAGES/: ordo.po
src/: main.rs
ui/: main.slint
